# HW6-HMM

./: pyproject.toml
.github/workflows/: test.yml
hmm/: hmm.py
test/: test_hmm.py
